# Eval-ai-library

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  article.tex  examples.py  pyproject.toml  references.bib
eval_lib/: __init__.py  cli.py  connector_html.py  dashboard_server.py  evaluate.py  html.py  llm_client.py  metric_pattern.py  model_catalog.py  price.py  testcases_schema.py  trace_agent.py  utils.py
eval_lib/agent_metrics/: __init__.py
eval_lib/agent_metrics/conversational_flow_metric/: __init__.py  conversational_flow.py
eval_lib/agent_metrics/failure_rate_metric/: __init__.py  failure_rate.py
eval_lib/agent_metrics/goal_achievement_metric/: __init__.py  goal_achievement.py
eval_lib/agent_metrics/knowledge_retention_metric/: knowledge_retention.py
eval_lib/agent_metrics/repetitive_pattern_metric/: __init__.py  repetitive_pattern.py
eval_lib/agent_metrics/role_adherence_metric/: role_adherence.py
eval_lib/agent_metrics/task_success_metric/: task_success_rate.py
eval_lib/agent_metrics/tools_correctness_metric/: tool_correctness.py
eval_lib/connector/: __init__.py  dataset_parser.py  engine.py  metric_registry.py  models.py  routes.py  trace_models.py  trace_receiver.py  trace_routes.py
eval_lib/datagenerator/: datagenerator.py  document_loader.py
eval_lib/deterministic_metrics/: __init__.py  contains_metric.py  ends_with_metric.py  exact_match_metric.py  format_check_metric.py  json_schema_metric.py  language_detection_metric.py  length_check_metric.py  non_empty_metric.py  regex_match_metric.py  starts_with_metric.py
eval_lib/metrics/answer_precision_metric/: answer_precision.py
eval_lib/metrics/answer_relevancy_metric/: answer_relevancy.py
eval_lib/metrics/bias_metric/: bias.py  bias_template.py
eval_lib/metrics/contextual_precision_metric/: contextual_precision.py
eval_lib/metrics/contextual_recall_metric/: contextual_recall.py
eval_lib/metrics/contextual_relevancy_metric/: contextual_relevancy.py
eval_lib/metrics/custom_metric/: custom_eval.py
eval_lib/metrics/faithfulness_metric/: faithfulness.py
eval_lib/metrics/geval/: geval.py  geval_template.py
eval_lib/metrics/restricted_refusal_metric/: restricted_refusal.py
eval_lib/metrics/toxicity_metric/: toxicity.py  toxicity_template.py
eval_lib/reliability_metrics/: __init__.py  perturbation_generator.py  reliability_score.py
eval_lib/reliability_metrics/calibration_metric/: __init__.py  calibration.py
eval_lib/reliability_metrics/context_decay_metric/: __init__.py  context_decay.py
eval_lib/reliability_metrics/loop_detection_metric/: __init__.py  loop_detection.py
eval_lib/reliability_metrics/outcome_consistency_metric/: __init__.py  outcome_consistency.py
eval_lib/reliability_metrics/planning_quality_metric/: __init__.py  planning_quality.py
eval_lib/reliability_metrics/prompt_robustness_metric/: __init__.py  prompt_robustness.py
eval_lib/security_metrics/harmful_content_metric/: harmful_content.py
eval_lib/security_metrics/jailbreak_detection_metric/: jailbreak_detection.py
eval_lib/security_metrics/pii_leakage_metric/: pii_leakage.py
eval_lib/security_metrics/prompt_injection_detection_metric/: prompt_injection_detection.py
eval_lib/static/: connector.css  connector.js  dashboard.css  dashboard.js
eval_lib/tracing/: __init__.py  autogen_callback.py  claude_agent_callback.py  crewai_callback.py  haystack_callback.py  llamaindex_callback.py  openai_assistants_callback.py  otel_collector.py  phidata_callback.py  semantic_kernel_callback.py  sender.py  smolagents_callback.py  trace_utils.py
eval_lib/vector_metrics/: __init__.py  embedding_provider.py  reference_match_metric.py  semantic_similarity_metric.py
experiments/: TODO_experiments.md  config.py  dataset_loaders.py  eval_deepeval.py  eval_ragas.py  eval_tcva.py  history.md  run_step1_load.py  run_step2_tcva.py  run_step3_ragas.py  run_step4_deepeval.py  run_step5_analyze.py  run_step6_optimize_tcva.py  run_step7_ab_test_prompts.py  run_step8_sensitivity_and_bootstrap.py  run_step9_ablation.py
experiments/data/: summeval_coh_prepared.json  summeval_prepared.json  summeval_rel_prepared.json  usr_prepared.json
experiments/results/: analysis_summary.json  benchmark_local_vs_openai.json  step8_sensitivity_bootstrap.json  step9_ablation.json  summeval_deepeval_scores.json  summeval_ragas_scores.json  summeval_rel_deepeval_scores.json  summeval_rel_ragas_scores.json  summeval_rel_tcva_scores.json  summeval_tcva_scores.json  usr_deepeval_scores.json  usr_ragas_scores.json  usr_tcva_scores.json
figures/: generate_fig7_fig8.py  generate_fig9.py
