[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-ai-library"
version = "0.6.1"
description = "Comprehensive AI Model Evaluation Framework with support for multiple LLM providers"
readme = "README.md"
authors = [
    {name = "Aleksandr Meshkov", email = "alekslynx90@gmail.com"}
]
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "evaluation", "llm", "rag", "metrics", "testing", "quality-assurance"]
requires-python = ">=3.9"

dependencies = [
    # Unified LLM router — handles 100+ providers via a single API.
    # Replaces hand-rolled per-provider chat completion paths in eval_lib/llm_client.py
    # for everything except Ollama (native API) and MLX (custom <think> handling).
    # Pinned exactly: LiteLLM ships almost daily with occasional regressions, so
    # bump deliberately and re-run the suite when we want a newer version.
    "litellm==1.77.1",
    # Core LLM providers — kept because LiteLLM imports them lazily,
    # and our get_embeddings() still uses the OpenAI SDK directly.
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-genai>=0.2.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",

    # Data generation dependencies
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.1.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "python-pptx>=0.6.21",
    "PyMuPDF>=1.23.0",
    "mammoth>=1.6.0",
    "PyYAML>=6.0.0",
    "html2text>=2020.1.16",
    "markdown>=3.4.0",
    "pandas>=2.0.0",
    "striprtf>=0.0.26",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "presidio-analyzer>=2.2.0",
    "spacy>=3.0.0,<3.8.0",

    # Dashboard dependencies
    "flask>=3.0.0",

    # Tracing dependencies
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
# Lightweight installation for tracing only
lite = [
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
]
# LLM as a judge — only LLM providers, no local models or document processing
llm = [
    "litellm==1.77.1",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-genai>=0.2.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "flask>=3.0.0",
    "aiohttp>=3.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
vectors = [
    "sentence-transformers>=2.0.0",
]
deterministic = [
    "jsonschema>=4.0.0",
    "langdetect>=1.0.9",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/meshkovQA/Eval-ai-library"
Documentation = "https://github.com/meshkovQA/Eval-ai-library#readme"
Repository = "https://github.com/meshkovQA/Eval-ai-library"
"Bug Tracker" = "https://github.com/meshkovQA/Eval-ai-library/issues"

[project.scripts]
eval-lib = "eval_lib.cli:main"

[tool.setuptools.packages.find]
include = ["eval_lib*"]

[tool.setuptools.package-data]
eval_lib = ["py.typed", "static/*.js", "static/*.css"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]