[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-ai-library"
version = "0.7.4"
description = "Comprehensive AI Model Evaluation Framework with support for multiple LLM providers"
readme = "README.md"
authors = [
    {name = "Aleksandr Meshkov", email = "alekslynx90@gmail.com"}
]
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "evaluation", "llm", "rag", "metrics", "testing", "quality-assurance"]
requires-python = ">=3.9"

#
# Required deps — what `pip install eval-ai-library` needs to run the core
# LLM-as-a-judge metrics, the connector UI, and tracing. Heavy ML / document /
# PII libraries live in optional extras (see [project.optional-dependencies]).
#
# Sizing: this list installs in ~50MB. Adding [full] brings it to ~3GB because
# of torch + CUDA toolkit, so the split is intentional.
#
dependencies = [
    # Unified LLM router — handles 100+ providers via a single API.
    # Pinned exactly: LiteLLM ships almost daily with occasional regressions.
    "litellm==1.77.1",
    # OpenAI SDK — used directly by get_embeddings() (LiteLLM doesn't cover
    # embeddings in our flow) and lazy-loaded by litellm for OpenAI calls.
    "openai>=1.0.0",
    # Anthropic + Google SDKs — litellm imports them lazily but they're tiny
    # and most users hit at least one of them, so keep them in the base set.
    "anthropic>=0.18.0",
    "google-genai>=0.2.0",
    # Schemas and numerics — used in core eval metrics (no escape hatch).
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    # Connector UI lives behind a Flask blueprint.
    "flask>=3.0.0",
    # Tracing transport + Ollama native HTTP path.
    "aiohttp>=3.8.0",
    # Config files used by the connector.
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
# ----- minimal subsets ------------------------------------------------------
# Tracing-only install (no LLM clients) — for users who only want to ship spans
# to an external collector without running evals locally.
lite = [
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
]
# Alias for the base install — kept for backward compatibility with users who
# wrote `pip install eval-ai-library[llm]` before the 0.7.0 split.
llm = [
    "litellm==1.77.1",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-genai>=0.2.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "flask>=3.0.0",
    "aiohttp>=3.8.0",
]

# ----- feature extras -------------------------------------------------------
# Local ML models for jailbreak / prompt-injection / harmful-content detection.
# This is the BIG one — torch alone pulls ~800MB and the CUDA toolkit on Linux
# adds several more GB. Only install if you actually run those security metrics.
local-models = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

# PII leakage detection via Microsoft Presidio. Pulls spaCy + a language model.
pii = [
    "presidio-analyzer>=2.2.0",
    "spacy>=3.0.0,<3.8.0",
]

# Dataset generation from documents (DatasetGenerator, DocumentLoader). Pulls
# the langchain document-loader stack and a pile of file-format parsers.
datagen = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.1.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "python-pptx>=0.6.21",
    "PyMuPDF>=1.23.0",
    "mammoth>=1.6.0",
    "html2text>=2020.1.16",
    "markdown>=3.4.0",
    "pandas>=2.0.0",
    "striprtf>=0.0.26",
]

# LangChain callback handler for tracing eval-lib spans into LangChain runs.
langchain = [
    "langchain-core>=0.1.0",
]

# Embedding-based metrics (semantic similarity, reference match) using a local
# sentence-transformers model.
vectors = [
    "sentence-transformers>=2.0.0",
]

# Pure-deterministic metrics (regex / json schema / language detection).
deterministic = [
    "jsonschema>=4.0.0",
    "langdetect>=1.0.9",
]

# Everything in one go — equivalent to the pre-0.7.0 default install.
full = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "presidio-analyzer>=2.2.0",
    "spacy>=3.0.0,<3.8.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.1.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "python-pptx>=0.6.21",
    "PyMuPDF>=1.23.0",
    "mammoth>=1.6.0",
    "html2text>=2020.1.16",
    "markdown>=3.4.0",
    "pandas>=2.0.0",
    "striprtf>=0.0.26",
    "sentence-transformers>=2.0.0",
    "jsonschema>=4.0.0",
    "langdetect>=1.0.9",
]

# ----- developer / docs -----------------------------------------------------
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/meshkovQA/Eval-ai-library"
Documentation = "https://github.com/meshkovQA/Eval-ai-library#readme"
Repository = "https://github.com/meshkovQA/Eval-ai-library"
"Bug Tracker" = "https://github.com/meshkovQA/Eval-ai-library/issues"

[project.scripts]
eval-lib = "eval_lib.cli:main"

[tool.setuptools.packages.find]
include = ["eval_lib*"]

[tool.setuptools.package-data]
eval_lib = ["py.typed", "static/*.js", "static/*.css"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]